clusters/nowu/nowu/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nowu
  labels:
    app.kubernetes.io/component: nowu
    istio-injection: enabled
