clusters/nowu/nowu/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
    service: nginx
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
  selector:
    app: nginx
