clusters/nowu/nowu/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
          name: http-web-svc
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx
    service: nginx
spec:
  ports:
  - name: ngx-svc-port
    protocol: TCP
    port: 8080
    targetPort: http-web-svc
  selector:
    app: nginx
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: ngx-external
spec:
  parentRefs:
  - name: http-gateway
    namespace: istio-ingress
  hostnames:
  - "alpha.now-u.com"
  rules:
  - matches:
    - path:
        value: /
        type: Exact
    backendRefs:
    - name: nginx-service
      port: 8080
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: http-gateway
  namespace: istio-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
spec:
  gatewayClassName: istio
  listeners:
  - name: api-http
    hostname: "alpha.now-u.com"
    port: 80 
    protocol: HTTP
    allowedRoutes:
      namespaces:
         from: All

  - hostname: alpha.now-u.com
    name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        group: ""
        name: secret-tls
    allowedRoutes:
      namespaces:
        from: All
